tests/baselines/reference/FunctionDeclaration6_es6.errors.txt
FunctionDeclaration6_es6.ts(1,18): error TS2523: 'yield' expressions cannot be used in a parameter initializer.
FunctionDeclaration6_es6.ts(1,18): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== FunctionDeclaration6_es6.ts (2 errors) ====
    function*foo(a = yield) {
                     ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
                     ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    }